Fix product listing text overlapping problem

--- a/css/style.css
+++ b/css/style.css
@@ -4023,6 +4023,10 @@ h4 {
   .functional-area {
     position: relative;
   }
+  .functional-area .section-title {
+    -ms-flex-preferred-size: 48%;
+        flex-basis: 48%;
+  }
   .functional-area .section-title h2, .functional-area .section-title h3, .functional-area .section-title h4 {
     font-size: 24px;
     line-height: 31px;
@@ -4046,18 +4050,26 @@ h4 {
   .functional-area .filter-buttons .filter span:not(.btn) {
     display: none;
   }
-  .functional-area .shop-by {
+  .functional-area .filter-buttons .shop-by {
     position: absolute;
     top: 4px;
     right: 15px;
+    -ms-flex-preferred-size: 45%;
+        flex-basis: 45%;
   }
-  .functional-area .shop-by .btn {
-    display: inline;
+  .functional-area .filter-buttons .shop-by .btn {
+    display: inline-block;
     background: none;
     color: #B3522C;
     padding: 0;
   }
-
+}
+@media only screen and (max-width: 767px) and (max-width: 380px) {
+  .functional-area .filter-buttons .shop-by .btn {
+    width: 120px;
+  }
+}
+@media only screen and (max-width: 767px) {
   .product-listing-section #filter-area {
     position: absolute;
     background: #fff;
