--- a/scss/base/_mixin.scss
+++ b/scss/base/_mixin.scss
@@ -13,6 +13,12 @@
         @content;
     }
 }
+// less than 360px
+@mixin smallest {
+    @media only screen and (max-width:380px) {
+        @content;
+    }
+}
 
 // from 576px to 768px
 @mixin phone-large {
